# BICExact

./: Dockerfile  README.md  docker-compose.yml
src/: README.md  count_dyndom_detected_hinges.py  count_fatcat_detected_hinges.py  dyndom_execution_time_shibuya_improved.csv  dyndom_experiment_shibuya.py  dyndom_simulation.py  dyndom_simulation_execution_time_improved.csv  estimate_hinge_numbers  estimate_hinge_numbers.cpp  eval_result_shibuya.py  fatcat_execution_time_shibuya_improved.csv  fatcat_experiment_shibuya.py  fatcat_experiment_shibuya_comp_time.py  fatcat_simulation.py  fatcat_simulation_execution_time.csv  fatcat_simulation_execution_time_improved.csv  fatcat_simulation_hinge_count_result.csv  go.mod  go.sum  hinge_estimation_example.sh  main.go  make_simulation_data.py  make_simulation_sigma.py  plot_accuracy_f_measure.py  plot_f_measure.py  prmsdh_postprocessing_experiment.cpp  pyproject.toml  rmsd_for_same_amino_acid.py  rmsd_io.h  rmsdh_new.h  same_amino_acid_pdb.py  shibuya_auto_rmsdhk.cpp  simulation_auto_shibuya_parallel_latest.cpp  simulation_bic.sh  simulation_rmsdh_bic_parallel_latest.cpp  speed_comparison_rmsdh.sh  template.html
src/coord_csv/: coord_149l_A_1l53_A.csv  coord_1bpd_A_2bpg_A.csv  coord_1c9k_B_1cbu_B.csv  coord_1cbu_B_1c9k_B.csv  coord_1ebg_A_3enl_A.csv  coord_1ezm_A_1u4g_A.csv  coord_1ggg_A_1wdn_A.csv  coord_1l53_A_149l_A.csv  coord_1ldm_A_6ldh_A.csv  coord_1lfg_A_1lfh_A.csv  coord_1lfh_A_1lfg_A.csv  coord_1lst_A_2lao_A.csv  coord_1u4g_A_1ezm_A.csv  coord_1urp_A_2dri_A.csv  coord_1wdn_A_1ggg_A.csv  coord_2bpg_A_1bpd_A.csv  (+8 more)
(+12 files in other folders)
