[tool.poetry]
name = "mplh"
version = "0.1.0"
description = ""
authors = ["KoyanoBunsho <buna40950@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
notebook = "^7.0.3"
biopandas = "^0.4.1"
tqdm = "^4.66.1"
rmsd = "^1.5.1"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
joblib = "^1.3.2"
ruff = "^0.3.4"
plotly = "^5.20.0"
scikit-learn = "^1.4.1.post1"
pytk = "^0.0.2.1"
pre-commit = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
